feat: allocate free cashflow to goals
